# tattoy

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: cd.yaml  ci.yaml  cross-compile.yaml  release-plz.yml  website.yaml
crates/shadow_terminal/: CHANGELOG.md  Cargo.toml  README.md
crates/shadow_terminal/src/: active_terminal.rs  errors.rs  lib.rs  output.rs  pty.rs  shadow_terminal.rs  steppable_terminal.rs
crates/shadow_terminal/src/tests/: helpers.rs
crates/tattoy/: CHANGELOG.md  Cargo.toml  README.md  default_config.toml  default_palette.toml  logo.txt
crates/tattoy-plugins/inverter/: Cargo.toml  main.rs
crates/tattoy-plugins/smokey_cursor/: CHANGELOG.md  Cargo.toml
crates/tattoy-plugins/smokey_cursor/src/: config.rs  main.rs  particle.rs  particles.rs  renderer.rs  simulation.rs
crates/tattoy-protocol/: CHANGELOG.md  Cargo.toml
crates/tattoy-protocol/src/: lib.rs
crates/tattoy/src/: blender.rs  cli_args.rs  compositor.rs  config.rs  input.rs  input_handler.rs  loader.rs  main.rs  opaque_cell.rs  palette_parser.rs  raw_input.rs  renderer.rs  run.rs  shadow_tty.rs  shared_state.rs  surface.rs  terminal_proxy.rs  utils.rs
crates/tattoy/src/config/: input.rs  main.rs
crates/tattoy/src/palette/: converter.rs  parser.rs  state_machine.rs
crates/tattoy/src/tattoys/: README.md  bg_command.rs  index.rs  minimap.rs  plugins.rs  random_walker.rs  scrollbar.rs  startup_logo.rs  tattoyer.rs  utils.rs
crates/tattoy/src/tattoys/notifications/: main.rs  message.rs
crates/tattoy/src/tattoys/shaders/: README.md  footer.glsl  fullscreen_triangle.glsl  gpu.rs  header.glsl  ichannel.rs  main.rs  point_lights.glsl  soft_shadows.glsl
crates/tattoy/src/tattoys/smokey_cursor/: config.rs  main.rs  particle.rs  particles.rs  simulation.rs
crates/tattoy/src/terminal_proxy/: input_handler.rs  proxy.rs
crates/tests/: Cargo.toml  e2e_tests.rs
crates/tests/resources/: bad_plugin.sh  plugin_outputter.bash  print_low_contrast_samples.sh
scripts/: lib.bash  website.bash
scripts/aur/: PKGBUILD
src/: cli_args.rs  input.rs  lib.rs  loader.rs  main.rs  pty.rs  renderer.rs  run.rs  shadow_tty.rs  shared_state.rs  surface.rs  tattoys.rs
src/tattoys/: index.rs  random_walker.rs  smokey_cursor.rs  utils.rs
src/tattoys/smokey_cursor/: config.rs  main.rs  particle.rs  particles.rs  simulation.rs
website/: README.md  ctl.sh
website/content/: download.md
website/content/docs/: config.md  getting-started.md  plugins.md  shaders.md
website/content/news/2025-05-12-an-end-to-terminal-ansi-codes/: index.md
website/content/news/2025-06-13-introducing-tattoy/: index.md
website/sass/components/: _footer.scss  _window.scss
website/sass/pages/: _docs.scss  _home.scss
website/static/assets/screenshots/: contrast.webm  minimap.webm  plugins.webm  rick.webm  shader1.webm  shader2.webm  shader3.webm  shader4.webm
website/templates/: index.html
website/templates/layouts/: base.html
website/templates/macros/: window.html
website/templates/shortcodes/: include.md
