[package]
name = "tattoy"
description = "Eye-candy for your terminal"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "TODO"
license = "MIT"
keywords = ["shell"]
categories = ["shell"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
glam = { version = "0.27.0" }
portable-pty = "0.8.1"
rand = "0.8.5"
rayon = "1.10.0"
rstar = "0.12.0"
termwiz = { git = "https://github.com/wez/wezterm.git", ref = "e5ac32f297cf3dd8f6ea280c130103f3cac4dddb" }
tokio = { version = "1.35.1", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
wezterm-term = { git = "https://github.com/wez/wezterm.git", ref = "e5ac32f297cf3dd8f6ea280c130103f3cac4dddb" }
