[package]
name = "shadow-terminal"
description = "A fully rendered in-memory terminal"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "TODO"
license = "MIT"
keywords = ["shell, testing"]
categories = ["shell"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
portable-pty = "0.8.1"
termwiz.workspace = true
snafu = "0.8.5"

wezterm-term = { git = "https://github.com/tombh/wezterm.git", branch = "add-surface-repaint-override" }
# wezterm-term = { path = "../../../wezterm/term/" }

[lints]
workspace = true

[dev-dependencies]
indoc.workspace = true
