[package]
name = "tattoy"
description = "Eye-candy for your terminal"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "TODO"
license = "MIT"
keywords = ["shell"]
categories = ["shell"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
console-subscriber = "0.4.1"
dirs = "6.0.0"
glam = { git = "https://github.com/bitshifter/glam-rs", rev = "aacb9c5f", features = [ "fast-math"] }
image = { version = "0.25.5", default-features = false }
notify = "8.0.0"
rand = "0.8.5"
rayon = "1.10.0"
rstar = "0.12.0"
serde = "1.0.217"
shadow-terminal = { path = "../shadow_terminal"}
tempfile.workspace = true
termwiz.workspace = true
tokio.workspace = true
toml = "0.8.20"
tracing.workspace = true
tracing-subscriber.workspace = true
xcap = "0.3.2"

[lints]
workspace = true
