[package]
name = "tattoy"
description = "Eye-candy for your terminal"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "TODO"
license = "MIT"
keywords = ["shell"]
categories = ["shell"]
default-run = "tattoy"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"]}
clap = { version = "4.5.4", features = ["derive"] }
color-eyre.workspace = true
console-subscriber = "0.4.1"
dirs = "6.0.0"
image = { version = "0.25.5", default-features = false }
notify = "8.0.0"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
shadow-terminal = { path = "../shadow_terminal"}
tattoy-protocol = { path = "../tattoy-protocol"}
tempfile.workspace = true
termwiz.workspace = true
tokio.workspace = true
toml = "0.8.20"
tracing.workspace = true
tracing-subscriber.workspace = true
xcap = "0.3.2"
wgpu = { version = "24.0", default-features = false, features = [ "dx12", "metal", "glsl" ] }

[lints]
workspace = true
