[package]
name = "tattoy"
description = "Eye-candy for your terminal"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tombh/tattoy"
license = "MIT"
authors = ["Tom Buckley-Houston <tattoy@tombh.co.uk>"]
keywords = ["shell"]
categories = ["shell"]
default-run = "tattoy"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"]}
clap = { version = "4.5.4", features = ["derive"] }
color-eyre.workspace = true
console-subscriber = "0.4.1"
dirs = "6.0.0"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
image = { version = "0.25.5", default-features = false }
notify-debouncer-full = "0.5.0"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
shadow-terminal = { path = "../shadow_terminal", version = "0.1.0" }
tattoy-protocol = { path = "../tattoy-protocol", version = "0.1.0" }
tempfile.workspace = true
termwiz.workspace = true
tokio.workspace = true
toml = "0.8.20"
tracing.workspace = true
tracing-subscriber.workspace = true
xcap = "0.3.2"
wgpu = { version = "24.0", default-features = false, features = [ "dx12", "metal", "glsl" ] }
palette.workspace = true

[lints]
workspace = true

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/tattoy", dest = "/usr/bin/tattoy", mode = "755" },
  { source = "../../LICENSE-MIT", dest = "/usr/share/doc/tattoy/LICENSE-MIT", mode = "644" },
  { source = "../../README.md", dest = "/usr/share/doc/tattoy/README.md", mode = "644" }
]

[package.metadata.deb]
assets = [
  [
    "target/release/tattoy",
    "usr/bin/",
    "755",
  ],
  [
    "../../LICENSE-MIT",
    "/usr/share/doc/tattoy/LICENSE-MIT",
    "644",
  ],
  [
    "../../README.md",
    "usr/share/doc/tattoy/README",
    "644",
  ]
]
