[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
shadow-terminal = { path = "../shadow_terminal" }
serde_json.workspace = true
tempfile.workspace = true
termwiz.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[test]]
name = "e2e"
path = "e2e_tests.rs"

[lints]
workspace = true
